--- a/clpipe/batchConfigs/slurmUNCConfig.json
+++ b/clpipe/batchConfigs/slurmUNCConfig.json
@@ -1,5 +1,5 @@
 {
-  "SubmissionHead": "sbatch",
+  "SubmissionHead": "sbatch --no-requeue",
   "SubmissionOptions": [{
     "command": "-n",
     "args": "1"
