--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -161,6 +161,7 @@
 	"T2StarExtraction": {
 		"TargetDirectory": "",
 		"TargetSuffix": "",
+		"WorkingDirectory":"",
 		"MaskDirectory": "",
 		"MaskSuffix":  "space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz",
 		"MaskFileOverride": "",
