--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -163,6 +163,7 @@
 	"T2StarExtraction": {
 		"TargetDirectory": "",
 		"TargetSuffix": "",
+		"ExclusionFile": "",
 		"WorkingDirectory":"",
 		"MaskDirectory": "",
 		"MaskSuffix":  "space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz",
