--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -152,6 +152,8 @@
 	"ReHoExtraction": {
 		"TargetDirectory": "",
 		"TargetSuffix": "",
+		"ExclusionFile": "",
+		"WorkingDirectory":"",
 		"MaskDirectory": "",
 		"MaskSuffix":  "space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz",
 		"MaskFileOverride": "",
