--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -74,7 +74,8 @@
 		"TargetSuffix": "space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz",
 		"OutputDirectory": "",
 		"OutputSuffix": "",
-		"Method": "10000_globalmedian"
+		"Method": "10000_globalmedian",
+		"LogDirectory": ""
 	},
 	"BetaSeriesOptions": {
 		"TargetDirectory": "",
