--- a/clpipe/batchConfigs/slurmUVAConfig.json
+++ b/clpipe/batchConfigs/slurmUVAConfig.json
@@ -24,5 +24,5 @@
   "OutputCommandActive": true,
 
 
-  "SingularityBindPaths": "/projects,/home,/scratch"
+  "SingularityBindPaths": "/sfs/qumulo/qproject,/sfs/qumulo/qhome,/sfs/lustre/bahamut/scratch"
 }
