Ignore DS_Store.

--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,12 @@ staticfiles
 TestFiles/
 tests/artifacts
 
-#vscode
+# vscode
 .vscode
 *.code-workspace
 
-#pytest
+# pytest
 .pytest_cache
+
+# Mac os
+*.DS_Store
