Update postproc workflow builder to handle new config.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -70,6 +70,8 @@
         "LogDirectory": ""
 	},
 	"PostProcessingOptions2": {
+		"WriteProcessGraph": true,
+		"ImageTR": 2,
 		"ProcessingStepOptions": {
 			"TemporalFiltering": {
 				"Algorithm":"Butterworth",
