Add AROMA and confound regression steps to postproc wf builder.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -84,8 +84,15 @@
 			}, 
 			"SpatialSmoothing": {
 				"Algorithm": "SUSAN",
-				"BrightnessThreshold": 0,
-      			"FWHM": 0
+      			"FWHM": 6
+			},
+			"ApplyAROMA":{
+				"Algorithm": "fsl_regfilt"
+			},
+			"ConfoundRegression": {
+				"Algorithm": "fsl_glm",
+				"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
+				"ConfoundFileName" : "confound_regressors.txt"
 			}
 		},
 		"ConfoundOptions": {
