--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -72,6 +72,11 @@
 	"PostProcessingOptions2": {
 		"WriteProcessGraph": true,
 		"ImageTR": 2,
+		"ProcessingSteps": [
+			"SpatialSmoothing",
+			"TemporalFiltering",
+			"IntensityNormalization"
+		],
 		"ProcessingStepOptions": {
 			"TemporalFiltering": {
 				"Algorithm":"Butterworth",
@@ -96,21 +101,9 @@
 			}
 		},
 		"ConfoundOptions": {
-			"Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-				"csf", "white_matter", "global_signal", "a_comp_cor.*"],
-			"ConfoundsQuad": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-			 "csf", "white_matter", "global_signal"],
-			"ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-			 "csf", "white_matter", "global_signal"],
-			"ConfoundsQuadDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-			 "csf", "white_matter", "global_signal"],
-			"MotionOutliers": true,
-			"Scrubbing": true,
-			"ScrubVar": "framewise_displacement",
-			"Threshold": 0.9,
-			"ScrubAhead": 1,
-			"ScrubBehind": 1,
-			"ScrubContiguous": 2
+			"Include": true,
+			"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
+			"ProcessedConfoundsFileName": "postprocessed_confounds.tsv"
 		},
 		"BatchOptions": {
 			"MemoryUsage": "20000",
