Add AFNI 3DTProject algorithm for confound regression. Not yet working.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -92,10 +92,10 @@
       			"FWHM": 6
 			},
 			"ApplyAROMA":{
-				"Algorithm": "fsl_regfilt"
+				"Algorithm": "fsl_glm"
 			},
 			"ConfoundRegression": {
-				"Algorithm": "fsl_glm",
+				"Algorithm": "afni_3dTproject",
 				"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
 				"ConfoundFileName" : "confound_regressors.txt"
 			}
