Correct output bug - add aroma tests.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -92,7 +92,7 @@
       			"FWHM": 6
 			},
 			"ApplyAROMA":{
-				"Algorithm": "fsl_glm"
+				"Algorithm": "fsl_regfilt"
 			},
 			"ConfoundRegression": {
 				"Algorithm": "afni_3dTproject",
