--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -103,7 +103,7 @@
 		"ConfoundOptions": {
 			"Include": true,
 			"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
-			"ProcessedConfoundsFileName": "postprocessed_confounds.tsv"
+			"ProcessedConfoundsSuffix": "postprocessed"
 		},
 		"BatchOptions": {
 			"MemoryUsage": "20000",
