Fix some subject task bugs.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -101,7 +101,7 @@
 			}
 		},
 		"ConfoundOptions": {
-			"Include": true,
+			"Include": false,
 			"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
 			"ProcessedConfoundsSuffix": "postprocessed"
 		},
