--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -91,7 +91,7 @@
 				"Algorithm": "SUSAN",
       			"FWHM": 6
 			},
-			"ApplyAROMA":{
+			"AROMARegression":{
 				"Algorithm": "fsl_regfilt"
 			},
 			"ConfoundRegression": {
@@ -101,7 +101,7 @@
 			}
 		},
 		"ConfoundOptions": {
-			"Include": false,
+			"Include": true,
 			"Columns": ["csf", "csf_derivative1", "white_matter", "white_matter_derivative1"],
 			"ProcessedConfoundsSuffix": "postprocessed"
 		},
