Refer to "reference image" instead of "reference" for clarity.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -95,7 +95,7 @@
 				"Algorithm": "fsl_regfilt"
 			},
 			"Resample":{
-				"Reference": "SET REFERENCE"
+				"ReferenceImage": "SET REFERENCE IMAGE"
 			},
 			"ConfoundRegression": {
 				"Algorithm": "afni_3dTproject",
