Add option for saving working directory to arbitrary path. Still defaults to using subject output directory if no working directory is provided.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -70,6 +70,7 @@
         "LogDirectory": ""
 	},
 	"PostProcessingOptions2": {
+		"WorkingDirectory": "",
 		"WriteProcessGraph": true,
 		"ProcessingSteps": [
 			"SpatialSmoothing",
