Add config option to set image space.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -72,6 +72,7 @@
 	"PostProcessingOptions2": {
 		"WorkingDirectory": "",
 		"WriteProcessGraph": true,
+		"TargetImageSpace": "MNI152NLin2009cAsym",
 		"ProcessingSteps": [
 			"SpatialSmoothing",
 			"TemporalFiltering",
