Update .gitignore to ignore extra files from postproc2 branch.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .idea/
 venv/
 build/
+dist/
 clpipe.egg-info/
 Test_BIDS/
 # if you remove the above rule, at least ignore the following:
@@ -57,4 +58,14 @@ crashlytics-build.properties
 
 staticfiles
 .env
-TestFiles/dicom_info_13002.tsv
+TestFiles/
+tests/artifacts
+
+# vscode
+*.code-workspace
+
+# pytest
+.pytest_cache
+
+# Mac os
+*.DS_Store
