--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -14,6 +14,9 @@
         "CoreUsage": "2",
         "LogDirectory": ""
 	},
+	"BIDSValidationOptions": {
+		"LogDirectory": ""
+	},
 	"FMRIPrepOptions": {
 		"BIDSDirectory": "",
 		"WorkingDirectory": "",
