Make  sidecarChanges a default part of the conversion config file, because it is always necessary for TaskName to be present in func sidecars in order to pass BIDS validation.

--- a/clpipe/data/defaultConvConfig.json
+++ b/clpipe/data/defaultConvConfig.json
@@ -4,6 +4,9 @@
             "dataType": "func",
             "modalityLabel": "bold",
             "customLabels": "task-srt",
+            "sidecarChanges":{
+				"TaskName": "srt"
+			},
             "criteria": {
 				"SeriesDescription":"*_srt",
                 "ImageType": ["ORIG*", "PRIMARY", "M", "ND", "MOSAIC"]
