Add ability to filter tasks in postproc2 new postproc2 configuration options, TargetTasks

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -73,6 +73,7 @@
 		"WorkingDirectory": "",
 		"WriteProcessGraph": true,
 		"TargetImageSpace": "MNI152NLin2009cAsym",
+		"TargetTasks": [],
 		"ProcessingSteps": [
 			"SpatialSmoothing",
 			"TemporalFiltering",
