Ignore the dist directory.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/
 dist/
 clpipe.egg-info/
 Test_BIDS/
+dist/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
