Add acquisition specifier.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -74,6 +74,7 @@
 		"WriteProcessGraph": true,
 		"TargetImageSpace": "MNI152NLin2009cAsym",
 		"TargetTasks": [],
+		"TargetAcquisitions": [],
 		"ProcessingSteps": [
 			"SpatialSmoothing",
 			"TemporalFiltering",
