--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -86,7 +86,7 @@
 		],
 		"ProcessingStepOptions": {
 			"TemporalFiltering": {
-				"Implementation":"Butterworth",
+				"Implementation":"fslmaths",
 				"FilteringHighPass": 0.008,
 				"FilteringLowPass": -1,
 				"FilteringOrder": 2
@@ -99,7 +99,7 @@
       			"FWHM": 6
 			},
 			"AROMARegression":{
-				"Implementation": "fsl_regfilt"
+				"Implementation": "fsl_regfilt_R"
 			},
 			"Resample":{
 				"ReferenceImage": "SET REFERENCE IMAGE"
