--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ sphinx-jsonschema
 -e .
 sphinx_rtd_theme>=0.5.1
 Sphinx>=4.2.0
+# Required for .rst indentation to work in HTML5 properly
+docutils==0.16
