Add "ApplyMask" as a default step.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -82,7 +82,8 @@
 		"ProcessingSteps": [
 			"SpatialSmoothing",
 			"TemporalFiltering",
-			"IntensityNormalization"
+			"IntensityNormalization",
+			"ApplyMask"
 		],
 		"ProcessingStepOptions": {
 			"TemporalFiltering": {
