Add a target directory to postproc2 config.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -76,6 +76,7 @@
 	"PostProcessingOptions2": {
 		"WorkingDirectory": "",
 		"WriteProcessGraph": true,
+		"TargetDirectory": "",
 		"TargetImageSpace": "MNI152NLin2009cAsym",
 		"TargetTasks": [],
 		"TargetAcquisitions": [],
