Add a configuration option for postproc2 output directory.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -80,6 +80,7 @@
 		"TargetImageSpace": "MNI152NLin2009cAsym",
 		"TargetTasks": [],
 		"TargetAcquisitions": [],
+		"OutputDirectory": "",
 		"ProcessingSteps": [
 			"SpatialSmoothing",
 			"TemporalFiltering",
