Add parameter checking.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -8,6 +8,7 @@
 		"DICOMDirectory": "",
 		"BIDSDirectory": "",
 		"ConversionConfig": "",
+		"Heuristic":"",
 		"DICOMFormatString": "",
 		"TimeUsage": "1:0:0",
 		"MemUsage": "5000",
