Update the path to the default version of fmriprep to 21.0.2

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -21,7 +21,7 @@
 		"BIDSDirectory": "",
 		"WorkingDirectory": "",
 		"OutputDirectory": "",
-		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep-20.2.1.simg",
+		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep_21.0.2.sif",
 		"FreesurferLicensePath": "/proj/hng/singularity_imgs/license.txt",
 		"UseAROMA": false,
 		"CommandLineOpts": "",
