Add dcm2niixOptions line in the default conversion config to set dcm2niix's maximum search depth.

--- a/clpipe/data/defaultConvConfig.json
+++ b/clpipe/data/defaultConvConfig.json
@@ -12,5 +12,6 @@
                 "ImageType": ["ORIG*", "PRIMARY", "M", "ND", "MOSAIC"]
             }
         }
-    ]
+    ],
+    "dcm2niixOptions": "-b y -ba y -z y -f '%3s_%f_%p_%t' -d 9"
 }
