--- a/clpipe/data/defaultConvConfig.json
+++ b/clpipe/data/defaultConvConfig.json
@@ -1,6 +1,13 @@
 {
     "descriptions": [
         {
+			"dataType": "anat",
+			"modalityLabel": "T1w",
+			"criteria": {
+				"SeriesDescription": "*t1*"
+			}
+		},
+        {
             "dataType": "func",
             "modalityLabel": "bold",
             "customLabels": "task-srt",
@@ -11,7 +18,16 @@
 				"SeriesDescription":"*_srt",
                 "ImageType": ["ORIG*", "PRIMARY", "M", "ND", "MOSAIC"]
             }
-        }
+        },
+        {
+			"dataType": "fmap",
+			"modalityLabel": "epi",
+			"customLabels": "dir-AP",
+			"criteria": {
+				"SeriesDescription": "*AP*"
+			},
+			"intendedFor": [1]
+		}
     ],
     "dcm2niixOptions": "-b y -ba y -z y -f '%3s_%f_%p_%t' -d 9"
 }
