Remove "image type" from default conversion config func example - usually is not necessary.

--- a/clpipe/data/defaultConvConfig.json
+++ b/clpipe/data/defaultConvConfig.json
@@ -15,8 +15,7 @@
 				"TaskName": "srt"
 			},
             "criteria": {
-				"SeriesDescription":"*_srt",
-                "ImageType": ["ORIG*", "PRIMARY", "M", "ND", "MOSAIC"]
+				"SeriesDescription":"*_srt"
             }
         },
         {
