--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -22,8 +22,14 @@
     "OutputSuffix": "resampled.nii.gz",
     "PrepareConfounds": true,
     "ConfoundSuffix": "desc-confounds_regressors.tsv",
-    "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z"],
-    "ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z"],
+    "Confounds": [
+      "trans_x", "trans_y", "trans_z", 
+      "rot_x", "rot_y", "rot_z"
+    ],
+    "ConfoundsDerive": [
+      "trans_x", "trans_y", "trans_z",
+      "rot_x", "rot_y", "rot_z"
+    ],
     "ConfoundsQuad": [],
     "ConfoundsQuadDerive": [],
     "MotionOutliers": true,
@@ -56,10 +62,11 @@
       "FSFDir": "./fsf_test",
       "EVDirectory": "./EV_test",
       "ConfoundDirectory": "./confound_test",
-      "EVFileSuffices": ["gohit.txt",
-                         "goomission.txt",
-                         "comission.txt",
-                         "correct.txt"
+      "EVFileSuffices": [
+        "gohit.txt",
+        "goomission.txt",
+        "comission.txt",
+        "correct.txt"
       ],
       "ConfoundSuffix": "confounds.tsv",
       "OutputDir": "./test_l1feat",
@@ -74,7 +81,8 @@
     }
   ],
   "Level2Setups": [
-    { "ModelName": "tworun_gngreg",
+    { 
+      "ModelName": "tworun_gngreg",
       "FSFPrototype": "",
       "SubjectFile": "l2_sublist.csv",
       "FSFDir": "",
@@ -88,6 +96,5 @@
         "BatchConfig": "slurmUNCConfig.json"
       }
     }
-    
   ]
 }
