Adjust references to glm_config now that GLMSetupOptions has been removed.

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -5,6 +5,7 @@
   "ParentClpipeConfig":"",
   "TaskName": "gng_example",
   "ReferenceImage": "SET REFERENCE",
+  "LogDirectory": "",
   "Level1Onsets": {
     "EventFileSuffix": "events.tsv",
     "TrialTypeVariable": "trial_type",
