Change the default L2 model name so it matches the format of L1. Don't include the model level in this default, to emphasize that the model level does not need to be in the model name.

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -15,7 +15,7 @@
   },
   "Level1Setups": [
     { 
-      "ModelName": "example_L1",
+      "ModelName": "example",
       "TargetDirectory": "./data_BIDS",
       "TargetSuffix": "resampled.nii.gz",
       "FSFPrototype": "",
@@ -44,7 +44,7 @@
   ],
   "Level2Setups": [
     { 
-      "ModelName": "tworun_gngreg",
+      "ModelName": "example",
       "FSFPrototype": "",
       "SubjectFile": "l2_sublist.csv",
       "FSFDir": "",
