Change the default task name to "SET TASK NAME" so its more clear that this needs to be edited.

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -3,7 +3,7 @@
   "Authors": "Me, myself, and I",
   "DateCreated": "",
   "ParentClpipeConfig":"",
-  "TaskName": "gng_example",
+  "TaskName": "SET TASK NAME",
   "ReferenceImage": "SET REFERENCE",
   "Level1Onsets": {
     "EventFileSuffix": "events.tsv",
