Update the deafult target suffix of L1 setups to point to postproc2's output suffix.

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -17,7 +17,7 @@
     { 
       "ModelName": "example",
       "TargetDirectory": "./data_BIDS",
-      "TargetSuffix": "resampled.nii.gz",
+      "TargetSuffix": "desc-postproc_bold.nii.gz",
       "FSFPrototype": "SET PROTOTYPE PATH",
       "ImageIncludeList": "",
       "ImageExcludeList": "",
