Make it clearer that working directory must be set in default config file, and exit the preprocess command if it has not been changed.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -29,7 +29,7 @@
 	},
 	"FMRIPrepOptions": {
 		"BIDSDirectory": "",
-		"WorkingDirectory": "",
+		"WorkingDirectory": "SET WORKING DIRECTORY",
 		"OutputDirectory": "",
 		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep_22.1.1.sif",
 		"FreesurferLicensePath": "/proj/hng/singularity_imgs/license.txt",
