Make the default TemplateFlowPath UNC's default, since we already do it for fmriprep path and freesurfer license path. In the future we can include some sort of project setup profiles option to allow switching between defaults of different sites if needed.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -36,7 +36,7 @@
 		"UseAROMA": false,
 		"CommandLineOpts": "",
 		"TemplateFlowToggle": true,
-		"TemplateFlowPath": "",
+		"TemplateFlowPath": "/proj/hng/singularity_imgs/template_flow",
 		"TemplateFlowTemplates": [
 			"MNI152NLin2009cAsym", 
 			"MNI152NLin6Asym", 
